# welfade

./: Cargo.toml  Procfile  README.md
backend/: .env  .gitignore  Cargo.toml
backend/docs/: アーキテクチャ.md
backend/migrations/2020-05-25-055744_create_users/: up.sql
backend/src/: __user.rs  actions.rs  main.rs  models.rs  schema.rs  user.rs
backend/src/database/: doc.md  postgres.rs
backend/src/entity/: user.rs
backend/src/gateway/: models.rs  repository.rs
backend/src/interface/: mod.rs  models.rs
backend/src/rest/: mod.rs
backend/src/templates/: intdex.html
backend/src/usecase/: user_usecase.rs
docker/: .env  docker-compose.yml
docker/actix/: Dockerfile
docker/postgres/: Dockerfile
docker/vue/: Dockerfile
frontend/: .env.example  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/plugins/: axios.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Login.vue  Signin.vue  Signup.vue
src/: main.rs
src/static/: intdex.html.tera
