[package]
name = "welfade"
version = "0.1.0"
authors = ["kawadumax <kazmax7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3"
r2d2 = "0.8.8"